--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drunk cowboy</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="image/favicon.ico">
 </head>
 
 <body>
@@ -41,30 +42,30 @@
 
         <main class="hands">
             <div class="beer">
-                <div class="beer__light boxes">
-                    <!-- <img class="beer__image" src="image/beer.jpg" alt="Beer"> -->
-                    <p class="beer__description fork">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cupiditate ut perspiciatis nihil temporibus repellat unde obcaecati ipsam sit culpa. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ab labore repudiandae corporis maiores nostrum deserunt error, dolores reiciendis fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit provident consequatur sint dignissimos assumenda delectus tempore fugit? Dolores, sequi quibusdam?
+                <div class="beer__light boxes">  
+                    <img class="beer__image" src="image/beer.jpg" alt="Beer">
+                    <p class="beer__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cupiditate ut perspiciatis nihil temporibus repellat unde obcaecati ipsam sit culpa. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ab labore repudiandae corporis maiores nostrum deserunt error, dolores reiciendis fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit provident consequatur sint dignissimos assumenda delectus tempore fugit? Dolores, sequi quibusdam?
                     </p>
                 </div>
                 <div class="beer__dark boxes">
-                    <!-- <img class="beer__image" src="image/beer.jpg" alt="Beer"> -->
-                    <p class="beer__description fork">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cupiditate ut perspiciatis nihil temporibus repellat unde obcaecati ipsam sit culpa. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ab labore repudiandae corporis maiores nostrum deserunt error, dolores reiciendis fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit provident consequatur sint dignissimos assumenda delectus tempore fugit? Dolores, sequi quibusdam?
+                    <img class="beer__image" src="image/beer.jpg" alt="Beer">
+                    <p class="beer__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cupiditate ut perspiciatis nihil temporibus repellat unde obcaecati ipsam sit culpa. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ab labore repudiandae corporis maiores nostrum deserunt error, dolores reiciendis fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit provident consequatur sint dignissimos assumenda delectus tempore fugit? Dolores, sequi quibusdam?
                     </p>
                 </div>
             </div>
             <div class="snacks">
                 <div class="snacks__fish boxes">
-                    <!-- <img class="snacks__image" src="image/snacks.jpg" alt="Snacks"> -->
+                    <img class="snacks__image" src="image/snacks.jpg" alt="Snacks">
                     <p class="snacks__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cupiditate ut perspiciatis nihil temporibus repellat unde obcaecati ipsam sit culpa.
                     </p>
                 </div>
                 <div class="snacks__meat boxes">
-                    <!-- <img class="snacks__image" src="image/snacks.jpg" alt="Snacks"> -->
+                    <img class="snacks__image" src="image/snacks.jpg" alt="Snacks">
                     <p class="snacks__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cupiditate ut perspiciatis nihil temporibus repellat unde obcaecati ipsam sit culpa.
                     </p>
                 </div>
                 <div class="snacks__nuts boxes">
-                    <!-- <img class="snacks__image" src="image/snacks.jpg" alt="Snacks"> -->
+                    <img class="snacks__image" src="image/snacks.jpg" alt="Snacks">
                     <p class="snacks__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cupiditate ut perspiciatis nihil temporibus repellat unde obcaecati ipsam sit culpa.
                     </p>
                 </div>
